Deixando areas definidas

--- a/index.html
+++ b/index.html
@@ -4,12 +4,173 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Liverpool</title>
+    <title>Chuva Teste</title>
     <link rel="stylesheet" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Material+Icons"
+    rel="stylesheet">
 </head>
 <body>
 
+  <div class="container areas">
   
+    <!-- ############## MENU LATERAL ############## -->
+    <div class="item nav_lateral">
+      <div class="nome-evento">
+        <p>SLACA 2019</p>
+      </div>
+      <div class="logo-evento">
+        <img src="icons/logo.png" alt="">
+      </div>
+      <nav class="menu-navegacao">
+        <ul class="ul-navegacao">
+          <li><a href="#">Apresentação</a></li>
+          <li><a href="#">Comitês</a></li>
+          <li><a href="#">Autores</a></li>
+          <li><a href="#">Eixos temáticos</a></li>
+          <li><a href="#">Trabalhos</a></li>
+          <li><a href="#">Contato</a></li>
+        </ul>
+      </nav>
+    </div>
+
+    <!-- ############## CABEÇALHO ############## -->
+    <div class="item header">
+      <div class="titulo-cabecalho">
+        <p>Anais do Simpósio Latino Americano de Ciências de Alimentos</p>
+        <span>Anais do 13º Simpósio Latino Americano de Ciência de Alimentos </span>
+        <p>ISSN: 1234-5678</p>
+      </div>
+      <div class="idioma-cabecalho">
+        <button id="botao">
+          <span class="material-icons">language</span>
+          <p>PT, BR</p>
+          <span class="material-icons">expand_more</span>
+        </button>
+      </div>
+      <div class="usuario-cabecalho">
+        <div class="usuario-informacoes">
+          <p>Bem vindo!</p>
+          <p>alguem12@galoascience.com</p>
+        </div>
+        <div class="usuario-avatar">
+          <img src="icons/image.png" alt="">
+        </div>
+      </div>
+    </div>
+
+    <!-- ############## PRIMEIRO CONTEÚDO ############## -->
+    <div class="item primeiro_conteudo">
+      <div class="titulo">
+        <div class="titulo-conteudos">
+          <p>Análise sensorial de preparações funcionais desenvolvidas para escolares </br> entre 09 e 15 anos, do município de Campinas/SP </p>
+        </div>
+        <div class="botoes">
+          <ul class="botoes-conteudos">
+            <li><button><span class="material-icons">download</span> Download</button></li>
+            <li><button><span class="material-icons">star</span></button></li>
+            <li><button><span class="material-icons">help</span></button></li>
+          </ul>
+          <p>COMO CITAR ESSE TRABALHO?</p>
+        </div>
+      </div>
+    </div>
+  
+    <!-- ############## SEGUNDO CONTEÚDO ############## -->
+    <div class="item segundo_conteudo">
+      <div class="conteudos-video">
+        <img src="imgs/vídeo apresentação.png" />
+      </div>
+      <div class="conteudo-detalhes">
+        <p class="titulo-detalhes">Detalhes</p>
+        <div class="textos-detalhes">
+          <p>
+            <span>
+              Tipo de Apresentação: <b>Pôster</b> </br>
+              Eixo temático: <b>Alimentação e saúde (AS)</b></br>
+              Palavras-chaves: <b>Alimentos funcionais, alimentação escolar.</b>
+            </span>
+          </p>
+          </br></br></br>
+          <p>
+            <span>
+              <b>Autores:</b></br>
+              Galileo Galilei¹</br>
+              Berta Lange de Morretes²</br>
+              Isaac Newton³</br>
+              Cesar Lattes¹</br>
+              Stephen Hawking⁴
+            </span>
+          </p>
+          </br></br></br>
+          <p>
+            ¹Universidade Estadual de Campinas</br>
+            ²Universidade de São Paulo</br>
+            ³Instituto Nacional de Pesquisas Espaciais</br>
+            ⁴Universidade Federal do Rio de Janeiro
+          </p>
+        </div>
+      </div>
+    </div>
+    
+    <!-- ############## RESUMO ############## -->
+    <div class="item resumo">
+      <div class="titulo-resumo">
+        <p>Resumo</p>
+      </div>  
+      <div class="texto-resumo">
+        <p>
+          Lorem ipsum dolor sit amet, 
+          consectetur adipiscing elit. Phasellus vitae 
+          turpis auctor, mollis felis ut, commodo turpis. 
+          Phasellus felis mauris, egestas eget cursus et, 
+          iaculis quis lacus. Fusce auctor eros sed magna 
+          ultricies gravida. Etiam aliquam dictum nisl, 
+          vel aliquet enim accumsan sit amet. Donec finibus 
+          nisi tellus, ut viverra lorem vestibulum ut.  
+          Phasellus condimentum orci id leo condimentum lobortis
+          et non lorem. Sed id nisl metus. Quisque sollicitudin
+          ligula in sapien scelerisque, ac gravida eros
+          vestibulum Phasellus condimentum orci id leo condimentum
+          lobortis et non lorem. Sed id nisl metus.
+          Quisque sollicitudin ligula in sapien scelerisque,
+          ac gravida eros vestibulum. 
+          Etiam aliquam dictum nisl, vel aliquet enim accumsan 
+          sit ametl accumsant... ver mais
+        </p>
+      </div>
+    </div>
+    
+    <!-- ############## DISCUSSOES ############## -->
+    <div class="item discussoes">
+      <div class="titulo-discussoes">
+        <p>Discussões</p>
+      </div>
+      <div class="conteudo-discussoes">
+        <p>Compartilhe suas ideias ou dúvidas com os autores!</p>
+        <div class="icons-discussoes">
+          <img src="icons/icone1.png" />
+          <img src="icons/icone2.png" />
+          <img src="icons/icone3.png" />
+        </div>
+        <span class="conteudo-discussoes-span">
+          Sabia que o maior estímulo no desenvolvimento 
+          científico e cultural é a curiosidade? 
+          Deixe seus questionamentos ou sugestões para 
+          o autor!
+        </span>
+        <hr size="1" width="100%" noshade>
+        <button>
+          <span class="material-icons">add</span>
+          Criar Tópico
+        </button> 
+      </div>
+    </div>
+
+    <!-- ############## RODAPE ############## -->
+    <div class="item rodape">
+      <img src="imgs/imagem - footer.png" />
+    </div>
+  </div>
   
 </body>
 </html>
